# fpl-dominator

./: .gitignore  README.md  Session.vim  TODO.md  audit_player_names.py  audit_player_names_v3.py  audit_realities.py  bamf  bamf.py  chimera_final_form_v3_production.py  chimera_final_form_v5_production.py  chimera_forge.py  chimera_forge_v2_strategic.py  chimera_forge_v3_thrifty.py  chimera_oracle.py  chimera_prophet.py  chimera_pyomo_v1.py  chimera_pyomo_v2.py  chimera_scenarios.py  commander.py  config.yaml  defenders.csv  enrich_with_insight.py  forge_cauldron.py  fpl_master_database_prophetic.csv  grand_synthesis.py  midfielders.csv  organize_screenshots.py  pyproject.toml  set_pieces.csv
gw10/: Screenshot from 2025-11-08 11-01-43.png.processed  Screenshot from 2025-11-08 11-24-00.png.processed  Screenshot from 2025-11-08 11-29-10.png.processed  Screenshot from 2025-11-08 11-29-21.png.processed  Screenshot from 2025-11-08 11-29-33.png.processed  Screenshot from 2025-11-08 11-29-47.png.processed  Screenshot from 2025-11-08 11-30-01.png.processed  defenders.csv  fixtures.csv  forwards.csv  fpl_master_database_FINAL_v5.csv  fpl_master_database_OMNISCIENT.csv  fpl_master_database_enriched.csv  fpl_master_database_prophetic.csv  goalkeepers.csv  midfielders.csv  squad_prophecy.md
gw11/: Screenshot from 2025-11-15 08-44-50.png.processed  Screenshot from 2025-11-15 08-45-00.png.processed  Screenshot from 2025-11-15 08-45-24.png.processed  Screenshot from 2025-11-15 08-45-40.png.processed  Screenshot from 2025-11-15 08-45-48.png.processed  defenders.csv  fixtures.csv  (+11 more)
(+219 files in other folders)
